RESOLVED FIXED83933
[BlackBerry] Accelerated compositing layers fail to render in direct rendering mode
https://bugs.webkit.org/show_bug.cgi?id=83933
Summary [BlackBerry] Accelerated compositing layers fail to render in direct renderin...
Arvid Nilsson
Reported 2012-04-13 12:44:47 PDT
This was because I accidentally dropped a "!" when upstreaming the patch for bug #83131
Attachments
Patch (1.71 KB, patch)
2012-04-13 12:57 PDT, Arvid Nilsson
no flags
Arvid Nilsson
Comment 1 2012-04-13 12:57:29 PDT
WebKit Review Bot
Comment 2 2012-04-13 19:05:04 PDT
Comment on attachment 137130 [details] Patch Rejecting attachment 137130 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 2 Last 500 characters of output: on 172 --non-interactive --force --accept theirs-conflict --ignore-externals returned non-zero exit status 1 in /mnt/git/webkit-commit-queue/Source/WebKit/chromium Error: 'depot_tools/gclient sync --force --reset --delete_unversioned_trees' failed 3 tries and returned 256 at Tools/Scripts/update-webkit-chromium line 107. Re-trying 'depot_tools/gclient sync --force --reset --delete_unversioned_trees' No such file or directory at /mnt/git/webkit-commit-queue/Tools/Scripts/webkitdirs.pm line 2425. Full output: http://queues.webkit.org/results/12396929
Arvid Nilsson
Comment 3 2012-04-16 00:42:31 PDT
Comment on attachment 137130 [details] Patch The cq- must have been a fluke (or I misunderstood the output), maybe we can try again.
WebKit Review Bot
Comment 4 2012-04-16 04:51:09 PDT
Comment on attachment 137130 [details] Patch Clearing flags on attachment: 137130 Committed r114242: <http://trac.webkit.org/changeset/114242>
WebKit Review Bot
Comment 5 2012-04-16 04:51:13 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.