[BlackBerry] Accelerated compositing layers fail to render in direct rendering mode https://bugs.webkit.org/show_bug.cgi?id=83933

Patch by Arvid Nilsson <anilsson@rim.com> on 2012-04-16
Reviewed by Adam Treat.

RIM PR: 149609
This was because I accidentally dropped an exclamation mark when
upstreaming the patch for PR 136381 (bug #83131). Fixed by adding back
the exclamation mark.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::rootLayerCommitTimerFired):

Canonical link: https://commits.webkit.org/101518@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114242 268f45cc-cd09-0410-ab3c-d52691b4dbfc